fix alignment stuff

--- a/themes/white-n-green/static/css/mixins.sass
+++ b/themes/white-n-green/static/css/mixins.sass
@@ -18,6 +18,3 @@
     text-shadow: 0px 0px 2px $green
   100%
     color: $green
-
-@mixin align-copy
-  max-width: 40% !important 
