--- a/themes/white-n-green/static/css/styles.sass
+++ b/themes/white-n-green/static/css/styles.sass
@@ -116,13 +116,13 @@ nav
   line-height: 1.5
 
 .alignleft
-  @include align-copy
+  max-width: 40% !important
   float: left
   margin-right: 0px !important 
   margin-left: 2% !important
 
 .alignright
-  @include align-copy
+  max-width: 40% !important
   float: right 
   margin-right: 2% !important 
   margin-left: 0px !important
